# Fleasion

./: .gitignore  CACHE_IMPLEMENTATION.md  CLAUDE.md  MIGRATION_GUIDE.md  README.md  REFACTORING_SUMMARY.md  launcher.py  pyproject.toml
.claude/: settings.local.json
Reference/: sky_ver.py
Reference/HoprTest2/: HoprU2.ui  test.py
Reference/HoprTest2/modules/cache/: PresetWindow.py  dialog2_ui.py  dialog3_ui.py  gameCard.py  game_card_widget.py  main.py  manifest.json
Reference/HoprTest2/modules/cache/tools/animpreview/: animpreview.py
Reference/HoprTest2/modules/export/2026-01-12_00-37-49/animation/: Angel wing Jump(char) - 134399640726138.rbxm  Ban Hammer Idle - 15784453578.rbxm  Dance2 - 14351086764.rbxm  Dance3 - 14351095988.rbxm  Double Jump - 94661487130414.rbxm  Double jump(char) - 91174276201935.rbxm  Idle - 13772440420.rbxm  ParryHandz - 13772445960.rbxm  (+23 more)
Reference/HoprTest2/modules/subplace_tab/: gameCard.py  game_card_widget.py  main.py  manifest.json  tab.ui
src/Fleasion/: __init__.py  app.py  tray.py
src/Fleasion/cache/: __init__.py  animation_viewer.py  audio_player.py  cache_manager.py  cache_viewer.py  dialog1_ui.py  dialog4_ui.py  gameCard.py  game_card_widget.py  mesh_processing.py  obj_viewer.py  rbxm_parser.py  tab.ui
src/Fleasion/cache/tools/animpreview/: R15RIG.rbxmx  R6RIG.rbxmx  default.project.json
src/Fleasion/config/: __init__.py  manager.py
src/Fleasion/gui/: __init__.py  about.py  delete_cache.py  json_viewer.py  logs.py  replacer_config.py  theme.py
src/Fleasion/prejsons/: __init__.py  downloader.py
src/Fleasion/proxy/: __init__.py  master.py
src/Fleasion/proxy/addons/: __init__.py  cache_scraper.py  texture_stripper.py
src/Fleasion/utils/: __init__.py  logging.py  paths.py  threading.py  windows.py
(+3 files in other folders)
