[project]
name = 'Fleasion'
version = '1.3.0'
description = 'Roblox asset interceptor and replacer with PyQt6 GUI'
readme = 'README.md'
requires-python = '>=3.14'
dependencies = [
    'mitmproxy>=12.2.1',
    'pyqt6>=6.8.0',
]

[project.scripts]
Fleasion = 'Fleasion:main'

[build-system]
requires = ['uv_build>=0.9.18,<0.10.0']
build-backend = 'uv_build'
