[project]
name = 'Fleasion'
version = '1.3.0'
description = 'Roblox asset interceptor and replacer with PyQt6 GUI'
readme = 'README.md'
requires-python = '>=3.14'
dependencies = [
    'mitmproxy>=12.2.1',
    'pyqt6>=6.8.0',
    'pyopengl>=3.1.0',
    'DracoPy>=1.3.0',
    'pillow>=11.0.0',
    'numpy>=2.0.0',
    'pywin32>=307',
    'requests>=2.32.0',
]

# Optional dependencies for future enhancements when Python 3.14 support is available:
# - pygame (audio playback) - currently no py314 wheels
# - mutagen (audio metadata) - currently no py314 wheels

[project.scripts]
Fleasion = 'Fleasion:main'

[build-system]
requires = ['uv_build>=0.9.18,<0.10.0']
build-backend = 'uv_build'
